--- a/pages/about_our_leaders.html
+++ b/pages/about_our_leaders.html
@@ -366,7 +366,7 @@
     <!-- SIDEBAR -->
 <div class="sidebar">
   <h3>RashtraSetu</h3>
-  <a href="home.html" class="menu-item"><i class="fa-solid fa-house"></i>Home</a>
+  <a href="../index.html" class="menu-item"><i class="fa-solid fa-house"></i>Home</a>
   <a href="search.html" class="menu-item"><i class="fa-solid fa-search"></i>Search</a>
   <a href="explore.html" class="menu-item"><i class="fa-solid fa-compass"></i>Explore</a>
   <a href="add-issue.html" class="menu-item"><i class="fa-solid fa-plus-circle"></i>Add Issues</a>
@@ -375,7 +375,13 @@
   <a href="politician_property.html" class="menu-item"><i class="fa-solid fa-user-tie"></i>Politician Properties</a>
   <a href="updates.html" class="menu-item"><i class="fa-solid fa-bell"></i>Updates</a>
   <a href="profile.html" class="menu-item"><i class="fa-solid fa-user"></i>Profile</a>
-  <a href="#" class="menu-item"><i class="fa-solid fa-right-from-bracket"></i>Logout</a>
+  <a href="#" onclick="logout" class="menu-item"><i class="fa-solid fa-right-from-bracket"></i>Logout</a>
+<script>
+function logout(){
+localstorage.clear()
+window.location.href="../index.html"
+}
+</script>
 </div>
 
 
