--- a/pages/login_demo.html
+++ b/pages/login_demo.html
@@ -24,7 +24,7 @@ body{background:#0f1419;color:#fff;margin-left:230px;font-family:Segoe UI}
 <!-- SIDEBAR -->
 <div class="sidebar">
   <h3>RashtraSetu</h3>
-  <a href="home.html" class="menu-item"><i class="fa fa-house"></i>Home</a>
+  <a href="../index.html" class="menu-item"><i class="fa fa-house"></i>Home</a>
   <a href="profile.html" class="menu-item"><i class="fa fa-user"></i>Profile</a>
   <a href="#" onclick="logout()" class="menu-item"><i class="fa fa-right-from-bracket"></i>Logout</a>
 </div>
