--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
   <a href="pages/search.html" class="menu-item"><i class="fa-solid fa-search"></i>Search</a>
   <a href="pages/explore.html" class="menu-item"><i class="fa-solid fa-compass"></i>Explore</a>
   <a href="pages/add-issue.html" class="menu-item"><i class="fa-solid fa-plus-circle"></i>Add Issues</a>
+  <a href="pages/add-bill.html" class="menu-item"><i class="fa-solid fa-plus-circle"></i>Add Bills</a>
   <a href="pages/janadicar-final.html" class="menu-item"><i class="fa-solid fa-gavel"></i>Janadhikar</a>
   <a href="pages/about_our_leaders.html" class="menu-item"><i class="fa-solid fa-users"></i>About Our Leaders</a>
   <a href="pages/politician_property.html" class="menu-item"><i class="fa-solid fa-user-tie"></i>Politician Properties</a>
