--- a/index.html
+++ b/index.html
@@ -1282,10 +1282,10 @@ const deltaY =
   <button id="fabMain" class="fab-main">+</button>
 
   <div id="fabMenu" class="fab-menu">
-    <button onclick="location.href='/pages/add-issue.html'">
+    <button onclick="location.href='/RashtraSetu/pages/add-issue.html'">
       <i class="fa-solid fa-circle-plus"></i> Add Issue
     </button>
-    <button onclick="location.href='/pages/add-bill.html'">
+    <button onclick="location.href='/RashtraSetu/pages/add-bill.html'">
       <i class="fa-solid fa-file-invoice"></i> Add Bill
     </button>
   </div>
