--- a/pages/add-issue.html
+++ b/pages/add-issue.html
@@ -177,7 +177,7 @@
         const user = JSON.parse(localStorage.getItem("user"));
         if(!user){
           alert("Please login first");
-          window.location.href = "/pages/profile.html";
+          window.location.href = "/RashtraSetu/pages/profile.html";
         }
       })
     </script>
