--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
   <!-- INTRO OVERLAY -->
   <div id="intro-overlay"></div>
 
-  <img id="intro-logo" src="images/weblogo3.png" alt="Logo" width="100px" height="200px" />
+  <img id="intro-logo" src="images/logo7.jpeg" width="100px" height="200px" />
 
 
   <!-- SIDEBAR -->
@@ -726,7 +726,8 @@
 
   <!-- NAVBAR -->
   <div class="gov-navbar">
-    <div class="gov-left"><img src="images/weblogo3.png" alt="logo"></div>
+    <div class="gov-left"><img src="images/logo7.jpeg" alt="logo"></div>
+    
     <div class="gov-center">
       <h5>RASHTRASETU</h5>
       <p>THE BRIDGE BETWEEN NATION AND CITIZENS</p>
@@ -734,19 +735,19 @@
     <div class="gov-right">
       <div class="official"><img src="images/fadanvis.jpeg" alt="">
         <div class="official-name">Devendra Fadnavis</div>
-        <div class="official-title">CM</div>
+        <div class="official-title">CHIEF MINISTER</div>
       </div>
       <div class="official"><img src="images/shinde.jpeg" alt="">
         <div class="official-name">Eknath Shinde</div>
-        <div class="official-title">Dy CM</div>
+        <div class="official-title">DEPUTY CHIEF MINISTER</div>
       </div>
       <div class="official"><img src="images/pawar.jpeg" alt="">
         <div class="official-name">Ajit Pawar</div>
-        <div class="official-title">Dy CM</div>
+        <div class="official-title">DEPUTY CHIEF MINISTER</div>
       </div>
       <div class="official"><img src="images/shelar.jpeg" alt="">
         <div class="official-name">Ashish Shelar</div>
-        <div class="official-title">IT Minister</div>
+        <div class="official-title">INFORMATION TECHNOLOGY MINISTER</div>
       </div>
     </div>
   </div>
