--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
     <a href="pages/add-issue.html" class="menu-item"><i class="fa-solid fa-plus-circle"></i>Add Issues</a>
     <a href="pages/add-bill.html" class="menu-item"><i class="fa-solid fa-plus-circle"></i>Add Bills</a>
     <a href="pages/janadicar-final.html" class="menu-item"><i class="fa-solid fa-gavel"></i>Janadhikar</a>
-    <a href="pages/about_our_leaders.html" class="menu-item"><i class="fa-solid fa-users"></i>About Our Leaders</a>
+    <a href="pages/politicians.html" class="menu-item"><i class="fa-solid fa-users"></i>About Our Leaders</a>
     <a href="pages/politician_property.html" class="menu-item"><i class="fa-solid fa-user-tie"></i>Politician
       Properties</a>
     <a href="pages/Updates.html" class="menu-item"><i class="fa-solid fa-bell"></i>Updates</a>
