--- a/pages/add-issue.html
+++ b/pages/add-issue.html
@@ -202,7 +202,7 @@
       <a href="janadicar-final.html" class="menu-item"
         ><i class="fa-solid fa-gavel"></i>Janadhikar</a
       >
-      <a href="about_our_leaders.html" class="menu-item"
+      <a href="politicians.html" class="menu-item"
         ><i class="fa-solid fa-users"></i>About Our Leaders</a
       >
       <a href="politician_property.html" class="menu-item"
