--- a/pages/profile.html
+++ b/pages/profile.html
@@ -236,7 +236,7 @@
         <a href="add-issue.html" class="menu-item"><i class="fa-solid fa-plus-circle"></i>Add Issues</a>
         <a href="add-bill.html" class="menu-item"><i class="fa-solid fa-plus-circle"></i>Add Bills</a>
         <a href="janadicar-final.html" class="menu-item"><i class="fa-solid fa-gavel"></i>Janadhikar</a>
-        <a href="about_our_leaders.html" class="menu-item"><i class="fa-solid fa-users"></i>About Our Leaders</a>
+        <a href="politicians.html" class="menu-item"><i class="fa-solid fa-users"></i>About Our Leaders</a>
         <a href="politician_property.html" class="menu-item"><i class="fa-solid fa-user-tie"></i>Politician
             Properties</a>
         <a href="Updates.html" class="menu-item"><i class="fa-solid fa-bell"></i>Updates</a>
