--- a/index.html
+++ b/index.html
@@ -741,8 +741,8 @@
         <div class="official-name">Eknath Shinde</div>
         <div class="official-title">DEPUTY CHIEF MINISTER</div>
       </div>
-      <div class="official"><img src="images/pawar.jpeg" alt="">
-        <div class="official-name">Ajit Pawar</div>
+      <div class="official"><img src="images/Sunetra-Pawar.jpeg" alt="">
+        <div class="official-name">Sunetra Pawar</div>
         <div class="official-title">DEPUTY CHIEF MINISTER</div>
       </div>
       <div class="official"><img src="images/shelar.jpeg" alt="">
@@ -1310,8 +1310,8 @@ const deltaY =
       </div>
 
       <div class="footer-leader">
-        <img src="images/pawar.jpeg" alt="Ajit Pawar">
-        <div class="footer-name">Ajit Pawar</div>
+        <img src="images/Sunetra-Pawar.jpeg" alt="Ajit Pawar">
+        <div class="footer-name">Sunetra Pawar</div>
         <div class="footer-role">Deputy CM</div>
       </div>
 
